--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <title>丽子美妆</title>
     <link rel="stylesheet" href="static/css/font-awesome.css">
+    <link rel="stylesheet" href="https://unpkg.com/mint-ui/lib/style.css">
     <style>
       body{
         margin: 0;
         padding: 0;
+        background: #f5f5f5;;
       }
     </style>
+    <script src="../../../../static/js/jquery-3.2.1.js"></script>
     <script>
       document.documentElement.style.fontSize=document.documentElement.clientWidth/10+"px"
       console.log( document.documentElement.fontSize)
