--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       body{
         margin: 0;
         padding: 0;
-        background: #f5f5f5;;
+        background: #f5f5f5;
       }
       
     </style>
     <script src="../../../../static/js/jquery-3.2.1.js"></script>
+    <script src="./node_modules/swiper/dist/js/swiper.js"></script>
     <script>
       document.documentElement.style.fontSize=document.documentElement.clientWidth/10+"px"
       console.log( document.documentElement.fontSize)
@@ -25,3 +26,4 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
